--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DumbStory</title>
-        <link rel="stylesheet" href="Asset/Styles/style.css">
+        <link rel="stylesheet" href="style.css">
     
     </head>
     <body>
@@ -29,7 +29,7 @@
             <div id="content" class="contents-wrapper">
                 <article id="sajak/puisi" class="card">
                     <h2>Ada Apa Dengan Kita?</h2>
-                    <img src="Asset/Image/Dumbstory.png">
+                    <img src="Image/Dumbstory.png">
                     <p>Kita telah bersama sekian lama, aku tidak pernah meragukan cintamu dan cintakupun benar-benar tulus untukmu, kita sangat bahagia dan berharap akan begini selamanya, tapi mengapa? mengapa sekarang kita lebih terluka di saat bersama? Ternyata ada hati yang harus kita jaga, bukan hatiku dan juga bukan hatimu, ya...kita telah menemukan cinta yang baru.</p>
                         
                     <p>Di sinilah munculnya dilema, kita telah bersama sekian lama, kita  terikat dan akan sangat sulit untuk membiasakan diri hidup tanpa satu sama lain sehingga ada perasaan enggan untuk berpisah namun di sisi lain kita juga ingin hidup bersama dengan orang baru yang kita cintai itu, membahagiakannya dan tidak ingin melukainya bahkan sedikitpun.</p>
@@ -42,7 +42,7 @@
                 </article>
                 <article id="cerpen" class="card">
                     <h2>Senyum dan Luka</h2>
-                    <img src="Asset/Image/sad.jpg">
+                    <img src="Image/sad.jpg">
 
                     <p>"Pagi-pagi udah rapi, mau kemana Ra?</p>
                     <p>"Adit ngajak jalan, mau gak mau ya harus diikutin" kataku sembari membersihkan sepatuku yang agak kotor.</p>
@@ -78,7 +78,7 @@
             <aside class="profile">
                 <header>
                     <h3>Tentang Penulis</h3>
-                    <img src="Asset/Image/Profile.jpg">
+                    <img src="Image/Profile.jpg">
                 </header>
                 <section id="box-profile">
                     <div class="information">
